# AdaptativeEdgeDetectorsABC

./: .gitignore  LICENSE.txt  pyproject.toml
src/myabc/: __init__.py  bilateral.py  var.py
