[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myabc"
version = "0.1.0"
description = "Library that includes two adaptive edge detection methods based on the Atangana-Baleanu fractional derivative in the Caputo sense."
authors = [
  { name="Sergio Renato Rengifo Lozano", email="srrl.2601200@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"

dependencies = [
  "numpy",
  "opencv-python",
  "scipy",
  "matplotlib"
]

[project.urls]
"Homepage" = "https://github.com/rnloz26/ABC"
"Bug Tracker" = "https://github.com/rnloz26/ABC/issues"

[tool.setuptools.packages.find]
where = ["src"]
